Add the registration card
Add the materialize components for the registration by N.U.A.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../../Libraries/materialize/css/materialize.min.css">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<title>Registration page</title>
 </head>
 <body>
@@ -16,7 +17,36 @@
 		</div>
 	</nav>
 
-	<h1> Pagina de registro </h1>
+	<br><br>
+	<div class="row align-card-registration">
+		<div class="col s1 m3 l4"></div>
+		<div class="col s10 m6 l4">
+		  <div class="card white">
+		    <div class="card-content">
+		      <span class="card-title"> Registro de entrada y salida </span>
+		      
+		      <div class="row">
+				<div class="input-field col s12 m12 l12">
+				    <select>
+				      <option value="">Choose your option</option>
+				      <option value="1">Option 1</option>
+				      <option value="2">Option 2</option>
+				      <option value="3">Option 3</option>
+				    </select>
+				    <label>Materialize Select</label>
+				</div>
+		      </div>
+
+		      <br><br>
+
+		    </div>
+		    <div class="card-action">
+		    	 <button class="btn waves-effect light-blue darken-4"> Registrar entrada <i class="material-icons right">send</i> </button>
+		    </div>
+		  </div>
+		</div>
+		<div class="col s1 m6 l4"></div>
+	</div>
 
 	<script type="text/javascript" source="href=../../Libraries/materialize/js/materialize.min.js"></script>
 	<script type="text/javascript" source="js/app.js"></script>
